<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        >
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:background="@drawable/search_bg"
            android:hint="@string/article_link"
            android:gravity="center_vertical"
            android:textSize="18sp"
            />
    </RelativeLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:background="@color/gridbg"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/TAGS"
            android:textColor="@color/tagscolor"
            android:textSize="13sp"
            android:gravity="center"
            android:singleLine="true"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/HOT"
            android:textColor="@color/tagscolor"
            android:textSize="13sp"
            android:gravity="center"
            android:singleLine="true"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/COMMEND"
            android:textColor="@color/tagscolor"
            android:textSize="13sp"
            android:gravity="center"
            android:singleLine="true"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/JOKE"
            android:textColor="@color/tagscolor"
            android:textSize="13sp"
            android:gravity="center"
            android:singleLine="true"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/RETRO"
            android:textColor="@color/tagscolor"
            android:textSize="13sp"
            android:gravity="center"
            android:singleLine="true"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/CAMERA"
            android:textColor="@color/tagscolor"
            android:textSize="13sp"
            android:gravity="center"
            android:singleLine="true"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="..."
            android:textColor="@color/tagscolor"
            android:textSize="13sp"
            android:gravity="center"
            android:singleLine="true"
            android:id="@+id/grid_on" />
    </android.support.v7.widget.LinearLayoutCompat>

    <GridView
        android:id="@+id/main_grid"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:numColumns="4"
        android:padding="10dp"
        android:background="@color/gridbg"
        android:visibility="gone"></GridView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        >
        <android.support.v4.view.ViewPager
            android:id="@+id/main_pagger"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        </android.support.v4.view.ViewPager>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="15dp"
            >
            <ImageView
                android:id="@+id/dot1"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/dot_a"
                android:layout_margin="5dp"
                />
            <ImageView
                android:id="@+id/dot2"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/dot_b"
                android:layout_margin="5dp"
                />
            <ImageView
                android:id="@+id/dot3"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/dot_b"
                android:layout_margin="5dp"
                />
        </LinearLayout>
    </RelativeLayout>

    <android.support.v7.widget.ListViewCompat
        android:id="@+id/main_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/background"
        android:dividerHeight="10dp"
        ></android.support.v7.widget.ListViewCompat>

</android.support.v7.widget.LinearLayoutCompat>
